// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper Component render should render when there is an errors in the steps 1`] = `
<React.Fragment>
  <StepperTransition
    active={true}
  >
    Import successfull
  </StepperTransition>
  <StepperTransition
    active={false}
  >
    <div
      className="stepper theme-stepper"
    >
      <div
        className="loading-content-steps theme-loading-content-steps stepper-content-error theme-stepper-content-error"
      >
        <h2>
          Test
        </h2>
        <ol
          className="stepper-steps theme-stepper-steps"
        >
          <li
            className="stepper-step theme-stepper-step stepper-step-success theme-stepper-step-success"
          >
            <div
              className="stepper-step-infos theme-stepper-step-infos"
            >
              <Memo(Icon)
                className="stepper-icon-success theme-stepper-icon-success stepper-icon theme-stepper-icon"
                name="talend-check"
              />
              Fetch Sample
            </div>
          </li>
          <li
            aria-current={true}
            className="stepper-step theme-stepper-step stepper-step-failure theme-stepper-step-failure"
          >
            <div
              className="stepper-step-infos theme-stepper-step-infos"
            >
              <Memo(Icon)
                className="stepper-icon-failure theme-stepper-icon-failure stepper-icon theme-stepper-icon"
                name="talend-warning"
              />
              Global Quality
            </div>
            <div
              className="stepper-step-message theme-stepper-step-message"
            >
              <span
                className="stepper-step-message-label theme-stepper-step-message-label"
              >
                We couldn't connect to the remote engine
              </span>
            </div>
          </li>
          <li
            className="stepper-step theme-stepper-step stepper-step-aborted theme-stepper-step-aborted"
          >
            <div
              className="stepper-step-infos theme-stepper-step-infos"
            >
              <Memo(Icon)
                className="stepper-icon-aborted theme-stepper-icon-aborted stepper-icon theme-stepper-icon"
                name="talend-cross"
              />
              Flattening
               (Aborted)
            </div>
          </li>
          <li
            className="stepper-step theme-stepper-step stepper-step-aborted theme-stepper-step-aborted"
          >
            <div
              className="stepper-step-infos theme-stepper-step-infos"
            >
              <Memo(Icon)
                className="stepper-icon-aborted theme-stepper-icon-aborted stepper-icon theme-stepper-icon"
                name="talend-cross"
              />
              Column Quality
               (Aborted)
            </div>
          </li>
        </ol>
      </div>
    </div>
  </StepperTransition>
</React.Fragment>
`;

exports[`Stepper Component render should render when there is no errors in the steps 1`] = `
<React.Fragment>
  <StepperTransition
    active={false}
  />
  <StepperTransition
    active={true}
  >
    <div
      className="stepper theme-stepper"
    >
      <div
        className="loading-content-steps theme-loading-content-steps"
      >
        <h2>
          Test
        </h2>
        <ol
          className="stepper-steps theme-stepper-steps"
        >
          <li
            className="stepper-step theme-stepper-step stepper-step-success theme-stepper-step-success"
          >
            <div
              className="stepper-step-infos theme-stepper-step-infos"
            >
              <Memo(Icon)
                className="stepper-icon-success theme-stepper-icon-success stepper-icon theme-stepper-icon"
                name="talend-check"
              />
              Fetch Sample
            </div>
          </li>
          <li
            aria-current={true}
            className="stepper-step theme-stepper-step stepper-step-loading theme-stepper-step-loading"
          >
            <div
              className="stepper-step-infos theme-stepper-step-infos"
            >
              <withI18nextTranslation(CircularProgress)
                className="stepper-icon-loading theme-stepper-icon-loading stepper-icon theme-stepper-icon"
                size="default"
                t={[Function]}
              />
              Global Quality
            </div>
          </li>
          <li
            aria-current={true}
            className="stepper-step theme-stepper-step stepper-step-loading theme-stepper-step-loading"
          >
            <div
              className="stepper-step-infos theme-stepper-step-infos"
            >
              <withI18nextTranslation(CircularProgress)
                className="stepper-icon-loading theme-stepper-icon-loading stepper-icon theme-stepper-icon"
                size="default"
                t={[Function]}
              />
              Flattening
            </div>
          </li>
          <li
            className="stepper-step theme-stepper-step stepper-step-pending theme-stepper-step-pending"
          >
            <div
              className="stepper-step-infos theme-stepper-step-infos"
            >
              <span
                className="stepper-icon-pending theme-stepper-icon-pending stepper-icon theme-stepper-icon"
              >
                -
              </span>
              Column Quality
               (Pending)
            </div>
          </li>
        </ol>
      </div>
    </div>
  </StepperTransition>
</React.Fragment>
`;
